# dirpin

./: .gitignore  Cargo.toml  README.md
dirpin/: Cargo.toml
dirpin-client/: Cargo.toml  config.toml
dirpin-client/migrations/: 20241030150156_create-entry-table.sql  20241030150156_create-pin-table.sql  20241112203014_conflict-table.sql  20241116151719_workspace-table.sql  20241116151749_entry-table.sql  20241116151812_conflict-table.sql
dirpin-client/src/: api_client.rs  database.rs  domain.rs  encryption.rs  lib.rs  settings.rs  sync.rs  utils.rs
dirpin-client/src/domain/: conflict.rs  context.rs  entry.rs  host.rs  workspace.rs
dirpin-client/src/interactive/: mod.rs
dirpin-common/: Cargo.toml  build.rs
dirpin-common/src/: api.rs  domain.rs  lib.rs  utils.rs
dirpin-server/: Cargo.toml  server.toml
dirpin-server/migrations/: 20241031120355_create-entries-table.sql  20241031120355_create-pins-table.sql  20241106182747_create-user.sql  20241106183140_create-session.sql  20241106183507_create-user-verification.sql
dirpin-server/src/: authentication.rs  database.rs  error.rs  lib.rs  models.rs  router.rs  settings.rs
dirpin-server/src/handlers/: entry.rs  mod.rs  user.rs
dirpin/src/: lib.rs  main.rs  tui.rs
dirpin/src/command/: client.rs  mod.rs  server.rs
dirpin/src/command/client/: account.rs  add.rs  info.rs  key.rs  list.rs  search.rs  status.rs  sync.rs
dirpin/src/command/client/account/: login.rs  logout.rs  register.rs
dirpin/src/command/client/search/: interactive.rs
dirpin/tests/: client.rs  server.rs  sync.rs  users.rs
dirpin/tests/api/: main.rs
dirpin/tests/helpers/: mod.rs
int-tests/: Cargo.toml
int-tests/tests/api/: main.rs
