[workspace]
members = ["dirpin", "dirpin-common", "dirpin-client", "dirpin-server"]
resolver = "2"

[workspace.package]
authors = ["Sam Uherek"]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
clap = { version = "4.5.20", features = ["derive"] }
config = { version = "0.14.0", default-features = false, features = ["toml"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
eyre = "0.6"
tokio = { version = "1.41", features = ["full"] }
reqwest = { version = "0.12.8", features = ["json"] }
uuid = { version = "1.11.0", features = ["v4", "v7", "std", "serde"] }
time = { version = "0.3.36", features = ["serde-human-readable"] }
base64 = "0.22.1"
tracing = "0.1" 
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sqlx = { version = "0.8.2", features = ["sqlite", "time", "uuid", "runtime-tokio-rustls", "migrate"] }
fs-err = "3.0.0"
