[package]
name = "dirpin-client"
authors.workspace = true
version.workspace = true
edition.workspace = true

[dependencies]
dirpin-common = { path = "../dirpin-common" }
tokio = { workspace = true }
config = { workspace = true }
serde = { workspace = true }
eyre = { workspace = true }
shellexpand = "3.1.0"
reqwest = { workspace = true }
crypto_secretbox = "0.1.1"
rmp = "0.8.14"
base64 = "0.22.1"
fs-err = "3.0.0"

