[package]
name = "dirpin-client"
authors.workspace = true
version.workspace = true
edition.workspace = true

[dependencies]
dirpin-common = { path = "../dirpin-common" }
tokio = { workspace = true }
config = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true } 
eyre = { workspace = true }
shellexpand = "3.1.0"
reqwest = { workspace = true }
crypto_secretbox = "0.1.1"
base64 = { workspace = true }
rmp = "0.8.14"
fs-err = { workspace = true }
time = { workspace = true }
sqlx = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
whoami = "1.5.2"
urlencoding = "2.1.3"
