[package]
name = "dirpin-client"
authors.workspace = true
version.workspace = true
edition.workspace = true

[dependencies]
dirpin-common = { path = "../dirpin-common" }
tokio = { workspace = true }
config = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true } 
eyre = { workspace = true }
shellexpand = "3.1.0"
reqwest = { workspace = true }
crypto_secretbox = "0.1.1"
base64 = { workspace = true }
rmp = "0.8.14"
fs-err = { workspace = true }
time = { workspace = true }
sqlx = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
whoami = "1.5.2"
urlencoding = "2.1.3"
generic-array = { version = "0.14", features = ["serde"] }
sql-builder = { workspace = true }
color-eyre = "0.6.3"
ratatui = "0.29.0"
crossterm = { version = "0.28.1", features = ["event-stream"] }
futures-util = { workspace = true }
rpassword = "7.3.1"
