[package]
name = "dirpin-server"
authors.workspace = true
version.workspace = true
edition.workspace = true

[dependencies]
dirpin-common = { path = "../dirpin-common" }
axum = "0.7.7"
eyre = { workspace = true } 
tokio = { workspace = true }
config = { workspace = true }
serde = { workspace = true }
