[package]
name = "dirpin-server"
authors.workspace = true
version.workspace = true
edition.workspace = true

[dependencies]
dirpin-common = { path = "../dirpin-common" }
axum = "0.7.7"
eyre = { workspace = true } 
tokio = { workspace = true }
config = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
tower-http = { version = "0.6.1", features = ["trace"] }
time = { workspace = true }
sqlx = { workspace = true }
fs-err = { workspace = true }
argon2 = { version = "0.5.3", features = ["std"] }
base64 = { workspace = true }
futures-util = { workspace = true }
thiserror = "2.0.1"
