[package]
name = "dirpin"
authros.workspace = true
version.workspace = true
edition.workspace = true

[dependencies]
dirpin-common = { path = "../dirpin-common" }
dirpin-client = { path = "../dirpin-client" }
dirpin-server = { path = "../dirpin-server" }
tokio.workspace = true
clap.workspace = true
config.workspace = true
eyre.workspace = true
serde.workspace = true
notify-rust = "4.11.3"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
fs-err = "3.0.0"
time = { workspace = true }
ratatui = "0.29.0"
crossterm = { version = "0.28.1", features = ["event-stream"] }
futures-util = { workspace = true }
color-eyre = "0.6.3"
